// Copyright 2015 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto2";

package proto;

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HbaseProto";
//option objc_class_prefix = "HB";

service HbaseService {
    rpc put (HbasePutRequest) returns (HbasePutResp);
    rpc get (HbaseGetRequest) returns (HbaseGetResp);
    rpc heartBeat(HbaseHeartBeatRequest) returns (HbaseHeartBeatResp);
}

message Data{
    required string key = 1;
	required string value = 2;
}

message HbasePutRequest {
    required uint32 version = 1;
    repeated Data dataArray = 2;
}

message HbasePutResp {
    required uint32 version = 1;
    required uint32 status = 2;
}

message HbaseGetRequest {
    required uint32 version = 1;
    repeated string keys = 2;
}

message HbaseGetResp {
    required uint32 version = 1;
    required uint32 status = 2;
    repeated Data dataArray = 3;
}

message HbaseHeartBeatRequest {
    required uint32 version = 1;
    required uint32 btype = 2;
}

message HbaseHeartBeatResp {
    required uint32 version = 1;
    required uint32 btype = 2;
}
